# Draco

./: .clang-format  .clang-tidy  .cmake-format.py  .codecov.yml  .eslintignore  .flake8  .fprettify.rc  .gitignore  .gitlab-ci.yml  .travis.yml  .yamllint  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CTestConfig.cmake  CTestCustom.cmake  ChangeLog  LICENSE.md  README.md  appveyor.yml
config/: ApplicationUnitTest.cmake  CMakeAddFortranSubdirectory.cmake  CMakeLists.txt  FindCOMPTON.cmake  FindCaliper.cmake  FindEOSPAC.cmake  FindGrace.cmake  FindLibquo.cmake  FindMETIS.cmake  FindNDI.cmake  FindParMETIS.cmake  FindVTune.cmake  Linux-NVHPC-Fortran.cmake  Linux-NVHPC.cmake  apple-clang.cmake  application_unit_test.py  autodoc_macros.cmake  buildEnv.cmake  capture_lcov.sh  compilerEnv.cmake  component_macros.cmake  configureFileOnMake.cmake  doc_macros.cmake  doxygen_config.in  draco-config-install.cmake.in  dracoTesting.cmake  dracoVersion.cmake  generate_dll_declspec.cmake  platform_checks.cmake  print_target_properties.cmake  query_fma.cc  query_gpu.cu  setupMPI.cmake  string_manip.cmake  unix-clang.cmake  unix-crayCC.cmake  unix-crayftn.cmake  unix-cuda.cmake  unix-flang.cmake  unix-g++.cmake  (+14 more)
config/CMakeAddFortranSubdirectory/: config_cafs_proj.cmake.in
src/: CMakeLists.txt
src/FortranChecks/: CMakeLists.txt  fc_derived_type.cc
src/RTT_Format_Reader/: CMakeLists.txt  CellData.cc  CellData.hh  CellDataIDs.cc  CellDataIDs.hh  CellDefs.cc  CellDefs.hh  CellFlags.cc  CellFlags.hh  Cells.cc  Cells.hh  Dims.cc  Dims.hh  Flags.cc  Flags.hh  Header.cc  Header.hh  NodeData.cc  NodeData.hh  NodeDataIDs.cc  NodeDataIDs.hh  NodeFlags.cc  NodeFlags.hh  Nodes.cc  Nodes.hh  RTT_Format_Reader.cc  RTT_Format_Reader.hh  RTT_Mesh_Reader.cc  RTT_Mesh_Reader.hh  SideData.cc  SideData.hh  SideDataIDs.cc  SideDataIDs.hh  SideFlags.cc  SideFlags.hh  Sides.cc  Sides.hh
src/VendorChecks/: CMakeLists.txt
src/c4/: C4_Datatype.hh  C4_Functions.hh  C4_MPI.cc  C4_MPI.hh  C4_MPI.i.hh  C4_MPI.t.hh  C4_MPI_async_pt.cc  C4_MPI_blocking_pt.cc  C4_MPI_free_inherited_comm.cc  C4_MPI_gather_scatter_pt.cc  C4_MPI_get_processor_name.cc  C4_MPI_reductions_pt.cc  C4_MPI_wait_any.cc  C4_Req.cc  C4_Req.hh  C4_Serial.cc  C4_Serial.hh  C4_Serial.t.hh  C4_Status.cc  C4_Status.hh  C4_Tags.hh  C4_Traits.hh  C4_sys_times.h  CMakeLists.txt  ChangeLog  Compare.cc  Compare.hh  Functors.hh  Global_Timer.cc  Global_Timer.hh  Global_Timer_set_global_activity.cc  Invert_Comm_Map.cc  Invert_Comm_Map.hh  MPI_Traits.hh  ParallelUnitTest.cc  ParallelUnitTest.hh  ParallelUnitTest.i.hh  Processor_Group.cc  Processor_Group.hh  Processor_Group.i.hh  (+32 more)
src/cdi/: CDI.cc  CDI.hh  CDI_Integrate_Rosseland_Planckian_Spectrum.cc  CDI_collapseOdfmgOpacitiesRosseland.cc  CDI_integratePlanckSpectrum.cc  CDI_integrateRosselandSpectrum.cc  CMakeLists.txt  CPCommon.hh  CPEloss.hh  EICoupling.hh  EoS.hh  GrayOpacity.hh  MultigroupOpacity.hh  OdfmgOpacity.hh  OpacityCommon.hh
src/cdi_CPEloss/: Analytic_CP_Eloss.cc  Analytic_CP_Eloss.hh  Analytic_Constant_Eloss_Model.hh  Analytic_Eloss_Model.hh  Analytic_KP_Alpha_Eloss_Model.cc  Analytic_KP_Alpha_Eloss_Model.hh  Analytic_Spitzer_Eloss_Model.cc  Analytic_Spitzer_Eloss_Model.hh  Analytic_TR_Eloss_Model.cc  Analytic_TR_Eloss_Model.hh  CMakeLists.txt  Tabular_CP_Eloss.cc  Tabular_CP_Eloss.hh
src/cdi_analytic/: Analytic_CP_Eloss.cc  Analytic_CP_Eloss.hh  Analytic_EICoupling.cc  Analytic_EICoupling.hh  Analytic_EoS.cc  Analytic_EoS.hh  Analytic_Gray_Opacity.cc  Analytic_Gray_Opacity.hh  Analytic_Models.cc  Analytic_Models.hh  Analytic_MultigroupOpacity.cc  Analytic_MultigroupOpacity.hh  Analytic_Odfmg_Opacity.cc  Analytic_Odfmg_Opacity.hh  CMakeLists.txt  Compound_Analytic_MultigroupOpacity.cc  Compound_Analytic_MultigroupOpacity.hh  Compound_Analytic_Odfmg_Opacity.cc  Compound_Analytic_Odfmg_Opacity.hh  Pseudo_Line_Analytic_MultigroupOpacity.cc  Pseudo_Line_Analytic_MultigroupOpacity.hh  Pseudo_Line_Analytic_Odfmg_Opacity.cc  Pseudo_Line_Analytic_Odfmg_Opacity.hh  Pseudo_Line_Base.cc  Pseudo_Line_Base.hh
src/cdi_eospac/: CMakeLists.txt  Eospac.cc  Eospac.hh  EospacException.hh  QueryEospac.cc  SesameTables.cc  SesameTables.hh
src/cdi_ipcress/: CMakeLists.txt  IpcressDataTable.cc  IpcressDataTable.hh  IpcressFile.cc  IpcressFile.hh  IpcressFile.t.hh  IpcressGrayOpacity.cc  IpcressGrayOpacity.hh  IpcressInterpreter.cc  IpcressMaterial.hh  IpcressMultigroupOpacity.cc  IpcressMultigroupOpacity.hh  IpcressOdfmgOpacity.cc  IpcressOdfmgOpacity.hh
src/cdi_ndi/: CMakeLists.txt  NDI_AtomicMass.cc  NDI_AtomicMass.hh  NDI_Base.cc  NDI_Base.hh  NDI_CP_Eloss.cc  NDI_CP_Eloss.hh  NDI_Common.hh  NDI_TN.cc  NDI_TN.hh  NDI_TNReaction.cc  NDI_TNReaction.hh  config.h.in  ndi.cc
src/compton/: CMakeLists.txt  Compton.cc  Compton.hh  config.h.in
src/compton_interface/: CMakeLists.txt  CSK_Interface.cc  CSK_Interface.hh  config.h.in
src/compton_tools/: CMakeLists.txt  Compton_Edep.cc  Compton_Edep.hh  Compton_Native.cc  Compton_Native.hh  Sparse_Compton_Matrix.cc  Sparse_Compton_Matrix.hh  cskrw.cc
src/constunits/: CMakeLists.txt  PhysicalConstants.cc  PhysicalConstants.hh
src/device/: CMakeLists.txt  GPU_CheckError.hh  GPU_Device.cc  GPU_Device.cmake  GPU_Device.hh  config.h.in  device_cuda.h  device_gpu.h
src/diagnostics/: CMakeLists.txt  Diagnostics.cc  Diagnostics.hh  Procmon.cc  Procmon.hh  Timing.cc  Timing.hh  config.h.in  draco_info.cc  draco_info.hh  draco_info_main.cc  runtime_check.cc  runtime_check.hh
src/ds++/: Assert.cc  Assert.hh  CMakeLists.txt  Check_Strings.hh  Constexpr_Functions.hh  Data_Table.hh  DracoMath.hh  DracoStrings.cc  DracoStrings.hh  DracoStrings.i.hh  DracoTerminal.cc  DracoTerminal.hh  Endian.cc  Endian.hh  FMA.hh  Field_Traits.hh  File_Streams.cc  File_Streams.hh  Homogeneous_New.cc  Homogeneous_New.hh  Index_Converter.hh  Index_Counter.hh  Index_Set.hh  Index_Set.i.hh  Index_Set.t.hh  Interpolate.cc  Interpolate.hh  Packing_Utils.hh  Prefetch.hh  Query_Env.hh  Range_Finder.hh  Release.cc  Release.hh  SP.hh  Safe_Divide.hh  ScalarUnitTest.cc  ScalarUnitTest.hh  (+24 more)
(+998 files in other folders)
